<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!-- Home -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.unimib.koby.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_newChat"
            app:destination="@id/fragment_new_chat" />
    </fragment>

    <!-- Nuova chat -->
    <fragment
        android:id="@+id/fragment_new_chat"
        android:name="com.unimib.koby.ui.newchat.NewChatFragment"
...
